--- a/cbf.ipynb
+++ b/cbf.ipynb
@@ -725,12 +725,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "55b2d56e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ranking_base.to_excel(r'C:\\Users\\Alan\\Desktop\\cbf_data\\df.xlsx')"
+    "df_ranking_base.to_excel(r'C:\\Users\\Alan\\Desktop\\projeto_brasileirao\\df.xlsx')"
    ]
   }
  ],
